mule-user-guide/v/3.2/transforming-data-in-a-flow.adoc
= 在流中转换数据

此示例显示如何使用自定义转换器。在这种情况下，一个简单的转换器用于流程中，以在将信息传递给自定义组件之前更改HTTP请求中收到的信息。

== 你会学到什么

* 如何在Mule Studio中创建自定义转换器。
* 如何在流程中配置Transformer。
* 如何实现自定义转换器。

观看视频
视频:: qzv4uG2zHF8 [YouTube的]

看到这个例子在Mule Studio中构建和运行

10分钟

== 先决条件

这些示例要求您运行 link:/mule-user-guide/v/3.2/adding-business-logic-to-a-flow[向业务流添加业务逻辑]中描述的示例。

== 构建示例

1.让我们从在 link:/mule-user-guide/v/3.2/adding-business-logic-to-a-flow[向业务流添加业务逻辑]中构建的"Hello"流程开始。运行它并在浏览器窗口中确认，当您转到`+http://localhost:8082/Fred+`时。

在名称前删除该斜杠。一个自定义变压器可以照顾到这一点。

2.在org.mulesoft.example.hello包中创建一个新类

3.将其命名为NameTransformer，并使其扩展AbstractTransformer

4.执行如下。它会检测以斜线开头的字符串并将其删除。否则，它将返回原始对象。

5.打开你的流量。

6.插入一个Java Transformer。通过将它从侧边栏拖放到HTTP入站端点和Hello组件之间来完成。在以前的Studio版本中，Java Transformer被命名为*Custom Transformer*。

7.双击刚刚插入的Transformer，并插入我们刚刚实现的Transformer类的全名。您可能还想添加一些其他文档信息。完成后单击确定并保存流程。

== 运行示例

1.像Mule应用程序一样运行（如您在前面的示例中所做的那样）。

2.打开浏览器窗口并转至http：// localhost：8082 / Fred。请注意，这次问候语不包含斜线：

== 摘要

* 您创建了一个自定义转换器并将其插入流中。
* 您的HTTP请求有效内容在传递给组件之前由Transformer处理。
*  HTTP端点，变换器和组件不了解彼此。骡子根据需要连接它们。

== 参考

*  link:/mule-user-guide/v/3.2/using-transformers[使用变形金刚]
*  link:/mule-user-guide/v/3.2/creating-custom-transformers[创建自定义变形金刚]
*  link:/mule-user-guide/v/3.2/creating-custom-transformer-class[创建自定义转换器类]


'''''
