mule-user-guide/v/3.3/transforming-data-in-a-flow.adoc
= 在流中转换数据

此示例显示如何使用自定义转换器。在这种情况下，一个简单的转换器用于流程中，以在将信息传递给自定义组件之前更改HTTP请求中收到的信息。

== 你会学到什么

* 如何在Mule Studio中创建自定义转换器。
* 如何在流程中配置Transformer。
* 如何实现自定义转换器。

观看视频
视频:: qzv4uG2zHF8 [YouTube的]

看到这个例子在Mule Studio中构建和运行

== 立即构建它！

10分钟

== 先决条件

这些示例要求您运行 link:/mule-user-guide/v/3.3/adding-business-logic-to-a-flow[向业务流添加业务逻辑]中描述的示例。

== 构建示例

. 我们从 link:/mule-user-guide/v/3.3/adding-business-logic-to-a-flow[向业务流添加业务逻辑]中构建的"Hello"流程开始。运行它并在浏览器窗口中确认，当你转到http：// localhost：8082 / Fred时，你会在屏幕上看到以下内容：
+
image:studioBrowserOutputInitial.png[studioBrowserOutputInitial]
+
现在，在名称前删除斜线不是很好吗？一个自定义变压器可以照顾到这一点。

. 在org.mulesoft.example.hello包中创建一个新类
+
image:studioAddNewClass.png[studioAddNewClass]

. 将其命名为NameTransformer，并使其扩展AbstractTransformer
+
image:studioConfigureTransformerClass.png[studioConfigureTransformerClass]

. 通过将以下代码添加到doTransform（）方法来实现该类。它会检测以斜线开头的字符串并将其删除。否则，它将返回原始对象。
+
[source, code, linenums]
----
if (src instanceof String){
        String name = (String)src;
        if (name.charAt(0) == '/'){
        return name.substring(1);
    }
     }
         
     return src;
----
+
image:studioTransformerCode.png[studioTransformerCode]

. 打开您的流程。它应该是这样的：
+
image:studioFlowShouldLookLike.png[studioFlowShouldLookLike]

. 插入一个Java Transformer。通过将它从侧边栏拖放到HTTP入站端点和Hello组件之间来完成。
+
[NOTE]
在以前的Studio版本中，Java Transformer被命名为*Custom Transformer*。
+
image:studioAddTransformerComponent.png[studioAddTransformerComponent]

. 双击刚刚插入的Transformer，并插入我们刚刚实现的Transformer类的全名。您可能还想添加一些其他文档信息。完成后单击确定并保存流程。

image:studioConfigureTransformerComponent.png[studioConfigureTransformerComponent]

image:studioConfigureTransformerComponentDoc.png[studioConfigureTransformerComponentDoc]

== 运行示例

. 像Mule应用程序一样运行（就像您在前面的示例中那样）。

. 打开浏览器窗口并转至http：// localhost：8082 / Fred。请注意，这次问候语不包含斜线：

image:studioBrowserOutputFinal.png[studioBrowserOutputFinal]

== 发生了什么？

* 您创建了一个自定义转换器并将其插入流中。
* 您的HTTP请求有效内容在传递给组件之前由Transformer处理。
*  HTTP端点，变换器和组件不了解彼此。骡子根据需要连接它们。

== 参考

*  link:/mule-user-guide/v/3.3/using-transformers[使用变形金刚]
*  link:/mule-user-guide/v/3.3/creating-custom-transformers[创建自定义变形金刚]
*  link:/mule-user-guide/v/3.3/creating-custom-transformer-classes[创建自定义转换器类]

== 下一步

下一步： link:/mule-user-guide/v/3.3/invoking-component-methods[调用组件方法]

上一个： link:/mule-user-guide/v/3.3/using-outbound-endpoints-to-publish-data[使用出站端点发布数据]
